[package]
name = "cargo-insta"
version = "1.41.1"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "A review tool for the insta snapshot testing library for Rust"
homepage = "https://insta.rs/"
repository = "https://github.com/mitsuhiko/insta"
documentation = "https://insta.rs/docs/cli/"
keywords = ["snapshot", "testing", "jest"]
categories = ["development-tools::cargo-plugins"]
edition = "2021"
readme = "README.md"
rust-version = "1.65.0"

[dependencies]
insta = { version = "=1.41.1", path = "../insta", features = [
    "json",
    "yaml",
    "redactions",
    "_cargo_insta_internal",
] }
cargo_metadata = { version = "0.18.0", default-features = false }
console = "0.15.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
proc-macro2 = { version = "1.0.60", features = ["span-locations"] }
# Needs pinning in Cargo.lock because of MSRV
syn = { version = "2.0.8", features = ["full", "visit", "extra-traits"] }
# Needs pinning in Cargo.lock because of MSRV
ignore = "0.4.17"
uuid = { version = "1.0.0", features = ["v4"] }
tempfile = "3.5.0"
# Needs pinning in Cargo.lock because of MSRV
semver = { version = "1.0.7", features = ["serde"] }
lazy_static = "1.4.0"
clap = { workspace = true }
open = "5.3.0"
itertools = "0.10.0"

[dev-dependencies]
walkdir = "2.3.1"
similar = "2.2.1"
itertools = "0.10.0"
termcolor = "1.1.2"
os_pipe = "1.2.1"
